Revision history for C and Perl extension of nfdump.

1.17 2015-07-xx
	- c: 

1.13 2015-07-08
	- perl: module requires use of threads 
	- perl: tests that depends on threads are executed only on 
	  systems where thread support is enabled

1.12 2015-07-05
	- c: removed __thread directive from source codes 
	- c: redesign of thread patch support nfdump-thread.patch and
	  nfdump-leak.patch patch merged into one file

1.11 2015-07-04
	- nfdumpp: added basic comparsion test for threads
	- perl: removed some issues with thread support in perl 

1.10 2015-06-30
	- Project entered into close cooperation with 
	  CESNET - Czech Nationl Research Network
	- c: thread support enabled by default (--enable-threads)
	- c: aggregation unit supports statistics 
	- c: new pair fields LNF_FLD_PAIR_PORT|ADDR|AS|IF|VLAN
	- c: examples/lnf_ex08_statistics added 
	- perl: Net::NfDump->info returns propper data 
	- perl: invalid handling of LNF_UINT16 (Bug #105472)
	- perl: nfasnupd do not require Geo::IP module

1.09 2015-05-28
	- perl: removed memory leak (Bug #104294)
	- perl: improved test 

1.08 2015-05-27
	- c: doc update 
	- c: EXPERIMENTAL very early stage of new filter code independent of the 
	     original nfdump filter code. New function lnf_filter_init_v1 or 
	     lnf_filter_init_v2 is used to initialize either old (nfdump) or 
	     new (libnf) filter. By default lnf_filter_init calls the old 
	     one filter. 
	- c: new error code LNF_ERR_OTHER_MSG for errors where lnf_error buffer is set 
	- c: _LIBNF_H macro added in the libnf.h file 
	- c: new function lnf_mem_read_reset - set cursor to first record 
	- c: nfdumpp uses by default only 70% of available threads 
	- c: nfdumpp checks -O option 
	- c: removed bug - libnf fails after attempt to read empty lnf_mem 
	- c: removed memory leak in original nfdump in LZO 
	- c: initial number of buckets in hash table increased to 500000
	- c: new functions lnf_mem_read_raw, lnf_mem_write_raw added